output/ObjectiveC2ansiParser.js
// $ANTLR 3.2 Sep 23, 2009 12:02:23 ObjectiveC2ansi.g 2010-02-01 00:29:53

/**
* ObjectiveC version 2
* based on an LL ansic grammars and
* and ObjectiveC grammar found in Learning Object C
*
* It's a Work in progress, most of the .h file can be parsed
* June 2008 Cedric Cuche
**/
var ObjectiveC2ansiParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    ObjectiveC2ansiParser.superclass.constructor.call(this, input, state);

    this.dfa2 = new ObjectiveC2ansiParser.DFA2(this);
    this.dfa22 = new ObjectiveC2ansiParser.DFA22(this);
    this.dfa32 = new ObjectiveC2ansiParser.DFA32(this);
    this.dfa54 = new ObjectiveC2ansiParser.DFA54(this);
    this.dfa60 = new ObjectiveC2ansiParser.DFA60(this);
    this.dfa61 = new ObjectiveC2ansiParser.DFA61(this);
    this.dfa68 = new ObjectiveC2ansiParser.DFA68(this);
    this.dfa67 = new ObjectiveC2ansiParser.DFA67(this);
    this.dfa75 = new ObjectiveC2ansiParser.DFA75(this);
    this.dfa72 = new ObjectiveC2ansiParser.DFA72(this);
    this.dfa83 = new ObjectiveC2ansiParser.DFA83(this);
    this.dfa106 = new ObjectiveC2ansiParser.DFA106(this);
    this.dfa107 = new ObjectiveC2ansiParser.DFA107(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(ObjectiveC2ansiParser, {
    T__29: 29,
    T__28: 28,
    T__27: 27,
    T__26: 26,
    FloatTypeSuffix: 18,
    T__25: 25,
    T__24: 24,
    LETTER: 13,
    T__23: 23,
    T__22: 22,
    EOF: -1,
    T__93: 93,
    T__94: 94,
    T__91: 91,
    T__92: 92,
    STRING_LITERAL: 7,
    T__90: 90,
    FLOATING_POINT_LITERAL: 12,
    COMMENT: 4,
    T__99: 99,
    T__98: 98,
    T__97: 97,
    T__96: 96,
    T__95: 95,
    T__80: 80,
    T__81: 81,
    T__82: 82,
    T__83: 83,
    LINE_COMMENT: 5,
    IntegerTypeSuffix: 16,
    CHARACTER_LITERAL: 11,
    T__85: 85,
    T__84: 84,
    T__87: 87,
    T__86: 86,
    T__89: 89,
    T__88: 88,
    T__126: 126,
    T__125: 125,
    T__128: 128,
    T__127: 127,
    WS: 21,
    T__71: 71,
    T__129: 129,
    T__72: 72,
    T__70: 70,
    T__76: 76,
    T__75: 75,
    T__130: 130,
    T__74: 74,
    EscapeSequence: 14,
    DECIMAL_LITERAL: 8,
    T__131: 131,
    T__73: 73,
    T__132: 132,
    T__133: 133,
    T__79: 79,
    T__134: 134,
    T__78: 78,
    T__135: 135,
    T__77: 77,
    T__68: 68,
    T__69: 69,
    T__66: 66,
    T__67: 67,
    T__64: 64,
    T__65: 65,
    T__62: 62,
    T__63: 63,
    T__118: 118,
    T__119: 119,
    T__116: 116,
    T__117: 117,
    T__114: 114,
    T__115: 115,
    T__124: 124,
    T__123: 123,
    Exponent: 17,
    T__122: 122,
    T__121: 121,
    T__120: 120,
    T__61: 61,
    T__60: 60,
    HexDigit: 15,
    T__55: 55,
    T__56: 56,
    T__57: 57,
    T__58: 58,
    T__51: 51,
    T__52: 52,
    T__53: 53,
    T__54: 54,
    T__107: 107,
    T__108: 108,
    T__109: 109,
    IDENTIFIER: 6,
    T__59: 59,
    T__103: 103,
    T__104: 104,
    T__105: 105,
    T__106: 106,
    T__111: 111,
    T__110: 110,
    T__113: 113,
    T__112: 112,
    HEX_LITERAL: 9,
    T__50: 50,
    T__42: 42,
    T__43: 43,
    T__40: 40,
    T__41: 41,
    T__46: 46,
    T__47: 47,
    T__44: 44,
    T__45: 45,
    T__48: 48,
    T__49: 49,
    OCTAL_LITERAL: 10,
    T__102: 102,
    T__101: 101,
    T__100: 100,
    T__30: 30,
    T__31: 31,
    T__32: 32,
    T__33: 33,
    T__34: 34,
    T__35: 35,
    T__36: 36,
    T__37: 37,
    T__38: 38,
    T__39: 39,
    UnicodeEscape: 20,
    OctalEscape: 19
});

(function(){
// public class variables
var T__29= 29,
    T__28= 28,
    T__27= 27,
    T__26= 26,
    FloatTypeSuffix= 18,
    T__25= 25,
    T__24= 24,
    LETTER= 13,
    T__23= 23,
    T__22= 22,
    EOF= -1,
    T__93= 93,
    T__94= 94,
    T__91= 91,
    T__92= 92,
    STRING_LITERAL= 7,
    T__90= 90,
    FLOATING_POINT_LITERAL= 12,
    COMMENT= 4,
    T__99= 99,
    T__98= 98,
    T__97= 97,
    T__96= 96,
    T__95= 95,
    T__80= 80,
    T__81= 81,
    T__82= 82,
    T__83= 83,
    LINE_COMMENT= 5,
    IntegerTypeSuffix= 16,
    CHARACTER_LITERAL= 11,
    T__85= 85,
    T__84= 84,
    T__87= 87,
    T__86= 86,
    T__89= 89,
    T__88= 88,
    T__126= 126,
    T__125= 125,
    T__128= 128,
    T__127= 127,
    WS= 21,
    T__71= 71,
    T__129= 129,
    T__72= 72,
    T__70= 70,
    T__76= 76,
    T__75= 75,
    T__130= 130,
    T__74= 74,
    EscapeSequence= 14,
    DECIMAL_LITERAL= 8,
    T__131= 131,
    T__73= 73,
    T__132= 132,
    T__133= 133,
    T__79= 79,
    T__134= 134,
    T__78= 78,
    T__135= 135,
    T__77= 77,
    T__68= 68,
    T__69= 69,
    T__66= 66,
    T__67= 67,
    T__64= 64,
    T__65= 65,
    T__62= 62,
    T__63= 63,
    T__118= 118,
    T__119= 119,
    T__116= 116,
    T__117= 117,
    T__114= 114,
    T__115= 115,
    T__124= 124,
    T__123= 123,
    Exponent= 17,
    T__122= 122,
    T__121= 121,
    T__120= 120,
    T__61= 61,
    T__60= 60,
    HexDigit= 15,
    T__55= 55,
    T__56= 56,
    T__57= 57,
    T__58= 58,
    T__51= 51,
    T__52= 52,
    T__53= 53,
    T__54= 54,
    T__107= 107,
    T__108= 108,
    T__109= 109,
    IDENTIFIER= 6,
    T__59= 59,
    T__103= 103,
    T__104= 104,
    T__105= 105,
    T__106= 106,
    T__111= 111,
    T__110= 110,
    T__113= 113,
    T__112= 112,
    HEX_LITERAL= 9,
    T__50= 50,
    T__42= 42,
    T__43= 43,
    T__40= 40,
    T__41= 41,
    T__46= 46,
    T__47= 47,
    T__44= 44,
    T__45= 45,
    T__48= 48,
    T__49= 49,
    OCTAL_LITERAL= 10,
    T__102= 102,
    T__101= 101,
    T__100= 100,
    T__30= 30,
    T__31= 31,
    T__32= 32,
    T__33= 33,
    T__34= 34,
    T__35= 35,
    T__36= 36,
    T__37= 37,
    T__38= 38,
    T__39= 39,
    UnicodeEscape= 20,
    OctalEscape= 19;

// public instance methods/vars
org.antlr.lang.extend(ObjectiveC2ansiParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return ObjectiveC2ansiParser.tokenNames; },
    getGrammarFileName: function() { return "ObjectiveC2ansi.g"; }
});
org.antlr.lang.augmentObject(ObjectiveC2ansiParser.prototype, {

    // inline static return class
    translation_unit_return: (function() {
        ObjectiveC2ansiParser.translation_unit_return = function(){};
        org.antlr.lang.extend(ObjectiveC2ansiParser.translation_unit_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ObjectiveC2ansi.g:17:1: translation_unit : ( external_declaration )+ EOF ;
    // $ANTLR start "translation_unit"
    translation_unit: function() {
        var retval = new ObjectiveC2ansiParser.translation_unit_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF2 = null;
         var external_declaration1 = null;

        var EOF2_tree=null;

        try {
            // ObjectiveC2ansi.g:17:17: ( ( external_declaration )+ EOF )
            // ObjectiveC2ansi.g:17:19: ( external_declaration )+ EOF
            root_0 = this.adaptor.nil();

            // ObjectiveC2ansi.g:17:19: ( external_declaration )+
            var cnt1=0;
            loop1:
            do {
                var alt1=2;
                var LA1_0 = this.input.LA(1);

                if ( ((LA1_0>=COMMENT && LA1_0<=IDENTIFIER)||(LA1_0>=22 && LA1_0<=29)||LA1_0==37||(LA1_0>=42 && LA1_0<=43)||LA1_0==45||(LA1_0>=55 && LA1_0<=72)||(LA1_0>=84 && LA1_0<=88)||(LA1_0>=90 && LA1_0<=92)) ) {
                    alt1=1;
                }


                switch (alt1) {
                case 1 :
                    // ObjectiveC2ansi.g:0:0: external_declaration
                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_external_declaration_in_translation_unit37);
                    external_declaration1=this.external_declaration();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, external_declaration1.getTree());


                    break;

                default :
                    if ( cnt1 >= 1 ) {
                        break loop1;
                    }
                    if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                        var eee = new org.antlr.runtime.EarlyExitException(1, this.input);
                        throw eee;
                }
                cnt1++;
            } while (true);

            EOF2=this.match(this.input,EOF,ObjectiveC2ansiParser.FOLLOW_EOF_in_translation_unit40); if (this.state.failed) return retval;
            if ( this.state.backtracking===0 ) {
            EOF2_tree = this.adaptor.create(EOF2);
            this.adaptor.addChild(root_0, EOF2_tree);
            }



            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    external_declaration_return: (function() {
        ObjectiveC2ansiParser.external_declaration_return = function(){};
        org.antlr.lang.extend(ObjectiveC2ansiParser.external_declaration_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ObjectiveC2ansi.g:19:1: external_declaration : ( COMMENT | LINE_COMMENT | preprocessor_declaration | function_definition | declaration | class_interface | class_implementation | category_interface | category_implementation | protocol_declaration | protocol_declaration_list | class_declaration_list );
    // $ANTLR start "external_declaration"
    external_declaration: function() {
        var retval = new ObjectiveC2ansiParser.external_declaration_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var COMMENT3 = null;
        var LINE_COMMENT4 = null;
         var preprocessor_declaration5 = null;
         var function_definition6 = null;
         var declaration7 = null;
         var class_interface8 = null;
         var class_implementation9 = null;
         var category_interface10 = null;
         var category_implementation11 = null;
         var protocol_declaration12 = null;
         var protocol_declaration_list13 = null;
         var class_declaration_list14 = null;

        var COMMENT3_tree=null;
        var LINE_COMMENT4_tree=null;

        try {
            // ObjectiveC2ansi.g:19:21: ( COMMENT | LINE_COMMENT | preprocessor_declaration | function_definition | declaration | class_interface | class_implementation | category_interface | category_implementation | protocol_declaration | protocol_declaration_list | class_declaration_list )
            var alt2=12;
            alt2 = this.dfa2.predict(this.input);
            switch (alt2) {
                case 1 :
                    // ObjectiveC2ansi.g:20:1: COMMENT
                    root_0 = this.adaptor.nil();

                    COMMENT3=this.match(this.input,COMMENT,ObjectiveC2ansiParser.FOLLOW_COMMENT_in_external_declaration47); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    COMMENT3_tree = this.adaptor.create(COMMENT3);
                    this.adaptor.addChild(root_0, COMMENT3_tree);
                    }


                    break;
                case 2 :
                    // ObjectiveC2ansi.g:20:11: LINE_COMMENT
                    root_0 = this.adaptor.nil();

                    LINE_COMMENT4=this.match(this.input,LINE_COMMENT,ObjectiveC2ansiParser.FOLLOW_LINE_COMMENT_in_external_declaration51); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    LINE_COMMENT4_tree = this.adaptor.create(LINE_COMMENT4);
                    this.adaptor.addChild(root_0, LINE_COMMENT4_tree);
                    }


                    break;
                case 3 :
                    // ObjectiveC2ansi.g:20:26: preprocessor_declaration
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_preprocessor_declaration_in_external_declaration55);
                    preprocessor_declaration5=this.preprocessor_declaration();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, preprocessor_declaration5.getTree());


                    break;
                case 4 :
                    // ObjectiveC2ansi.g:21:2: function_definition
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_function_definition_in_external_declaration58);
                    function_definition6=this.function_definition();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, function_definition6.getTree());


                    break;
                case 5 :
                    // ObjectiveC2ansi.g:22:3: declaration
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_declaration_in_external_declaration62);
                    declaration7=this.declaration();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, declaration7.getTree());


                    break;
                case 6 :
                    // ObjectiveC2ansi.g:23:3: class_interface
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_class_interface_in_external_declaration67);
                    class_interface8=this.class_interface();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, class_interface8.getTree());


                    break;
                case 7 :
                    // ObjectiveC2ansi.g:24:3: class_implementation
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_class_implementation_in_external_declaration71);
                    class_implementation9=this.class_implementation();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, class_implementation9.getTree());


                    break;
                case 8 :
                    // ObjectiveC2ansi.g:25:3: category_interface
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_category_interface_in_external_declaration75);
                    category_interface10=this.category_interface();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, category_interface10.getTree());


                    break;
                case 9 :
                    // ObjectiveC2ansi.g:26:3: category_implementation
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_category_implementation_in_external_declaration79);
                    category_implementation11=this.category_implementation();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, category_implementation11.getTree());


                    break;
                case 10 :
                    // ObjectiveC2ansi.g:27:3: protocol_declaration
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_protocol_declaration_in_external_declaration83);
                    protocol_declaration12=this.protocol_declaration();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, protocol_declaration12.getTree());


                    break;
                case 11 :
                    // ObjectiveC2ansi.g:28:3: protocol_declaration_list
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_protocol_declaration_list_in_external_declaration87);
                    protocol_declaration_list13=this.protocol_declaration_list();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, protocol_declaration_list13.getTree());


                    break;
                case 12 :
                    // ObjectiveC2ansi.g:29:3: class_declaration_list
                    root_0 = this.adaptor.nil();

                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_class_declaration_list_in_external_declaration91);
                    class_declaration_list14=this.class_declaration_list();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, class_declaration_list14.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            if ( this.state.backtracking===0 ) {

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    preprocessor_declaration_return: (function() {
        ObjectiveC2ansiParser.preprocessor_declaration_return = function(){};
        org.antlr.lang.extend(ObjectiveC2ansiParser.preprocessor_declaration_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // ObjectiveC2ansi.g:31:1: preprocessor_declaration : ( '#import' file_specification | '#include' file_specification | '#define' macro_specification | '#ifdef' expression | '#if' expression | '#undef' expression | '#ifndef' expression | '#endif' );
    // $ANTLR start "preprocessor_declaration"
    preprocessor_declaration: function() {
        var retval = new ObjectiveC2ansiParser.preprocessor_declaration_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var string_literal15 = null;
        var string_literal17 = null;
        var string_literal19 = null;
        var string_literal21 = null;
        var string_literal23 = null;
        var string_literal25 = null;
        var string_literal27 = null;
        var string_literal29 = null;
         var file_specification16 = null;
         var file_specification18 = null;
         var macro_specification20 = null;
         var expression22 = null;
         var expression24 = null;
         var expression26 = null;
         var expression28 = null;

        var string_literal15_tree=null;
        var string_literal17_tree=null;
        var string_literal19_tree=null;
        var string_literal21_tree=null;
        var string_literal23_tree=null;
        var string_literal25_tree=null;
        var string_literal27_tree=null;
        var string_literal29_tree=null;

        try {
            // ObjectiveC2ansi.g:31:25: ( '#import' file_specification | '#include' file_specification | '#define' macro_specification | '#ifdef' expression | '#if' expression | '#undef' expression | '#ifndef' expression | '#endif' )
            var alt3=8;
            switch ( this.input.LA(1) ) {
            case 22:
                alt3=1;
                break;
            case 23:
                alt3=2;
                break;
            case 24:
                alt3=3;
                break;
            case 25:
                alt3=4;
                break;
            case 26:
                alt3=5;
                break;
            case 27:
                alt3=6;
                break;
            case 28:
                alt3=7;
                break;
            case 29:
                alt3=8;
                break;
            default:
                if (this.state.backtracking>0) {this.state.failed=true; return retval;}
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 3, 0, this.input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // ObjectiveC2ansi.g:32:1: '#import' file_specification
                    root_0 = this.adaptor.nil();

                    string_literal15=this.match(this.input,22,ObjectiveC2ansiParser.FOLLOW_22_in_preprocessor_declaration98); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    string_literal15_tree = this.adaptor.create(string_literal15);
                    this.adaptor.addChild(root_0, string_literal15_tree);
                    }
                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_file_specification_in_preprocessor_declaration100);
                    file_specification16=this.file_specification();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, file_specification16.getTree());


                    break;
                case 2 :
                    // ObjectiveC2ansi.g:33:3: '#include' file_specification
                    root_0 = this.adaptor.nil();

                    string_literal17=this.match(this.input,23,ObjectiveC2ansiParser.FOLLOW_23_in_preprocessor_declaration104); if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) {
                    string_literal17_tree = this.adaptor.create(string_literal17);
                    this.adaptor.addChild(root_0, string_literal17_tree);
                    }
                    this.pushFollow(ObjectiveC2ansiParser.FOLLOW_file_specification_in_preprocessor_declaration106);
                    file_specification18=this.file_specification();

                    this.state._fsp--;
                    if (this.state.failed) return retval;
                    if ( this.state.backtracking===0 ) this.adaptor.addChild(root_0, file_specification18.getTree());

